--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,19 +10,19 @@
     --card-foreground: 222.2 84% 4.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
-    --primary: 174 100% 33.1%;
+    --primary: 174 100% 33%; /* #00a699 */
     --primary-foreground: 0 0% 98%;
-    --secondary: 0 0% 94.9%;
+    --secondary: 0 0% 95%; /* #f2f2f2 */
     --secondary-foreground: 0 0% 9%;
-    --muted: 0 0% 94.9%;
+    --muted: 0 0% 95%; /* #f2f2f2 */
     --muted-foreground: 0 0% 45.1%;
-    --accent: 197 76.5% 52.4%;
+    --accent: 199 77% 53%; /* #29abe2 */
     --accent-foreground: 0 0% 98%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
     --border: 0 0% 89.8%;
     --input: 0 0% 89.8%;
-    --ring: 174 100% 33.1%;
+    --ring: 174 100% 33%;
     --radius: 0.5rem;
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
@@ -38,19 +38,19 @@
     --card-foreground: 0 0% 98%;
     --popover: 222.2 84% 4.9%;
     --popover-foreground: 0 0% 98%;
-    --primary: 174 100% 33.1%;
+    --primary: 174 100% 33%;
     --primary-foreground: 0 0% 98%;
     --secondary: 0 0% 14.9%;
     --secondary-foreground: 0 0% 98%;
     --muted: 0 0% 14.9%;
     --muted-foreground: 0 0% 63.9%;
-    --accent: 197 76.5% 52.4%;
+    --accent: 199 77% 53%;
     --accent-foreground: 0 0% 98%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 0% 98%;
     --border: 0 0% 14.9%;
     --input: 0 0% 14.9%;
-    --ring: 174 100% 33.1%;
+    --ring: 174 100% 33%;
     --chart-1: 220 70% 50%;
     --chart-2: 160 60% 45%;
     --chart-3: 30 80% 55%;
